refactor & add github action

--- a/voxel_data.html
+++ b/voxel_data.html
@@ -13,9 +13,12 @@
     <div style="height: 200px;"></div>
 
     <div id="root">
-        <div style="height: 300px;"></div>
+        <div style="height: 300px;">Some text</div>
+        More text
         <div style="height: 400px;"></div>
     </div>
+
+    Even more text
 </body>
 
 </html>
