refactor to use html dataset as intermediary for bevy entities

--- a/voxel_data.html
+++ b/voxel_data.html
@@ -8,14 +8,14 @@
 </head>
 
 <body>
+    <div data-vx_style="x-length: 1; y-length: 2; z-length: 3"></div>
     <div></div>
-    <div style="height: 100px;"></div>
-    <div style="height: 200px;"></div>
+    <div></div>
 
     <div id="root">
-        <div style="height: 300px;">Some text</div>
+        <div data-vx_style="x-length: 1; y-length: 2; z-length: 3">Some text</div>
         More text
-        <div style="height: 400px;"></div>
+        <div></div>
     </div>
 
     Even more text
